--- a/massa-db-worker/Cargo.toml
+++ b/massa-db-worker/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [features]
 test-exports = ["massa_db_exports/test-exports"]
+jemalloc = ["rocksdb/jemalloc"]
 
 [dependencies]
 parking_lot = {workspace = true}
@@ -17,3 +18,4 @@ massa_db_exports = {workspace = true}
 [dev-dependencies]
 tempfile = {workspace = true}
 assert_matches = {workspace = true}
+
