Several bootstrap and rocksdb improvements (#4866)
* return SlotTooOld error in case of cache miss

* Increase default final_history_length

* do not fill cache

* Update rocksdb dep to 0.23

* Disable rocksdb cache in DB and on exposed iterator_cf

* Update massa_db.rs

* Add other memory related RocksDB options

* Change rocksdb, add jemalloc for linux, and update db options

* feature gate jemalloc

* cargo fmt

* cargo clippy fixes

* Rename, cleanup & use read cache only when necessary

--- a/massa-node/base_config/config.toml
+++ b/massa-node/base_config/config.toml
@@ -236,8 +236,8 @@
     initial_ledger_path = "base_config/initial_ledger.json"
     # path to the disk ledger db directory
     disk_ledger_path = "storage/ledger/rocks_db"
-    # length of the changes history. Higher values allow bootstrapping nodes with slower connections
-    final_history_length = 100
+    # length of the changes history. Higher values allow bootstrapping nodes with slower connections (300s between messages = 600 slots to keep)
+    final_history_length = 600
     # path of the initial deferred credits file
     initial_deferred_credits_path = "base_config/deferred_credits.json"
     # Interval of periods between creation of each ledger backup
