--- a/massa-execution-exports/Cargo.toml
+++ b/massa-execution-exports/Cargo.toml
@@ -29,9 +29,11 @@ massa_storage = { workspace = true }
 massa_final_state = { workspace = true }
 massa_pos_exports = { workspace = true }
 massa_module_cache = { workspace = true }
+massa_serialization = { workspace = true }
 massa_versioning = { workspace = true }
 massa-sc-runtime = { workspace = true }
 serde = { workspace = true, "features" = ["derive"] }
+tracing = { workspace = true }
 
 [dev-dependencies]
 mockall = { workspace = true }
