test(ci): run tests with minimal required features, exclude gas_calibration
Signed-off-by: Jean-François <jfm@laposte.net>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -225,7 +225,7 @@ jobs:
           include-pre-releases: false
           repo-token: ${{ secrets.GITHUB_TOKEN }}
       - run: cargo install cargo-nextest --locked
-      - run: cargo nextest run --retries 10 --profile ci --all-features
+      - run: cargo nextest run --retries 10 --profile ci --features=execution-trace,dump-block
       - run: cargo clean
       - run: cargo test --doc
       - uses: codecov/codecov-action@v4
