--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -20,14 +20,14 @@ jobs:
   release:
     strategy:
       matrix:
-        os: [ubuntu-latest, macOS-latest, windows-latest]
+        os: [ubuntu-22.04, macOS-latest, windows-latest]
         platform: [x86_64, arm64]
         include:
-          - os: ubuntu-latest
+          - os: ubuntu-22.04
             platform: x86_64
             target: x86_64-unknown-linux-gnu
             name: release_linux.tar.gz
-          - os: ubuntu-latest
+          - os: ubuntu-22.04
             platform: arm64
             target: aarch64-unknown-linux-gnu
             name: release_linux_arm64.tar.gz
@@ -112,7 +112,7 @@ jobs:
 
   checksum:
     needs: release
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     continue-on-error: true
     steps:
       - name: Download all artifacts
