--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [main, staging, trying]
   pull_request:
-    branches: [main, 'mainnet_*']
+    branches: [main, 'main_*', 'mainnet_*']
     types:
     - opened
     - reopened
