Added changes from Cleanup version (equiv' to 3.0 on MAIN)
commit b6736f26b968c8c182c6da4472f53b06ca9d9854
Author: Leo-Besancon <lb@massa.net>
Date:   Mon May 26 16:53:10 2025 +0200

    Add comment for V0 event limit

commit c697b62f17b11220a4ce6fe00bc410cd83d0375c
Author: Leo-Besancon <lb@massa.net>
Date:   Mon May 26 16:44:39 2025 +0200

    add deferred calls to transfers (#4907)

    * add deferred calls to transfers

    * Update massa-api-exports/src/execution.rs

    Co-authored-by: Damir Vodenicarevic <damipator@gmail.com>

    * Safe address handling

    * Update execution.rs

    * Update Cargo.lock

    * cargo clippy fix

    * Update Cargo.lock

    * Update grpc new_slot_abi_call_stacks

    * Update grpc new_slot_transfers

    ---------

    Co-authored-by: Damir Vodenicarevic <damipator@gmail.com>

commit 11c698900f37d2215b1dde42525beec584c64457
Author: Leo-Besancon <lb@massa.net>
Date:   Mon May 26 11:20:34 2025 +0200

    Update CI triggers

commit 83e009f8ec1d91773bdf62fad985ada62563ef02
Author: Leo-Besancon <lb@massa.net>
Date:   Fri May 23 11:07:04 2025 +0200

    Cargo update massa-sc-runtime

commit a75c8e38d3be9e903ec0757ab49fd74ef55987c3
Author: Leo-Besancon <lb@massa.net>
Date:   Fri May 23 11:01:15 2025 +0200

    increase default value `readonly_queue_length` to 100 (#4910)

commit 87028f6f7adf02930782719e8c77f856f2fafc41
Author: Leo-Besancon <lb@massa.net>
Date:   Fri May 23 10:25:13 2025 +0200

    Update version to MAIN.3.0 (#4909)

commit ae97930d6205ddae80dfabd017f8f3cbc1a7f3a8
Author: Leo-Besancon <lb@massa.net>
Date:   Fri May 23 10:20:50 2025 +0200

    Remove versioning of MIP-0001 (#4908)

    * Remove versioning of MIP-0001

    * Remove block reward versioning (review comments)

    * rename fetch_msgs_v1 to _opt, and cargo fmt

    * Refactor api get_status versioning

    * Remove API versioning

    * Remove versionning from GRPC

    * replaced dbg! with debug!

    * Update get_interface_version impl

    * Revert remo

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -109,10 +109,8 @@ massa_wallet = { path = "./massa-wallet" }
 massa_event_cache = { path = "./massa-event-cache" }
 
 # Massa projects dependencies
-# massa-proto-rs = { git = "https://github.com/massalabs/massa-proto-rs", branch = "deferred_calls" }
-# massa-sc-runtime = { git = "https://github.com/massalabs/massa-sc-runtime", "branch" = "deferred_calls" }
-massa-proto-rs = { git = "https://github.com/massalabs/massa-proto-rs", "rev" = "c9a7c55914f3d308996113df0936f15d96490313" }
-massa-sc-runtime = { git = "https://github.com/massalabs/massa-sc-runtime", "rev" = "cd14c775aff31b8c0f49064613118f428f9dd45f" }
+massa-proto-rs = { git = "https://github.com/massalabs/massa-proto-rs", "branch" = "mainnet_2_6" }
+massa-sc-runtime = { git = "https://github.com/massalabs/massa-sc-runtime", "branch" = "mainnet_2_6" }
 
 peernet = { git = "https://github.com/massalabs/PeerNet", "rev" = "04b05ddd320fbe76cc858115af7b5fc28bdb8310" }
 # Dev only - use local dependencies
@@ -176,6 +174,7 @@ rand_distr = "=0.4"
 rand_xoshiro = "0.6"
 rayon = "1.7"
 rcgen = "0.11"
+regex = "1.11.1"
 # "rust-rocksdb" instead of "rocksdb" fixes jemalloc feature, see https://github.com/rust-rocksdb/rust-rocksdb/issues/863
 rocksdb = { package = "rust-rocksdb", version = "0.36.0" }
 rust_decimal = { version = "1.32", default-features = false }
@@ -202,10 +201,10 @@ time = "0.3"
 tokio = "1.23"
 tokio-stream = "0.1"
 toml_edit = "0.21"
-tonic = "0.12"
-tonic-health = "0.12"
-tonic-reflection = "0.12"
-tonic-web = "0.12"
+tonic = "=0.12"
+tonic-health = "=0.12"
+tonic-reflection = "=0.12"
+tonic-web = "=0.12"
 tower = "0.4"
 tower-http = "0.6"
 tower-service = "0.3"
