--- a/massa-grpc/Cargo.toml
+++ b/massa-grpc/Cargo.toml
@@ -11,6 +11,7 @@ documentation = "https://docs.massa.net/"
 execution-trace = ["serde_json"]
 dump-block = []
 test-exports = []
+execution-info = ["execution-trace", "massa_execution_exports/execution-info"]
 
 [dependencies]
 massa-proto-rs = { workspace = true, "features" = ["tonic"] }
@@ -54,5 +55,6 @@ massa_sdk = { workspace = true }
 massa_consensus_exports = { workspace = true, "features" = ["test-exports"] }
 massa_protocol_exports = { workspace = true, "features" = ["test-exports"] }
 massa_final_state = { workspace = true }
+massa_ledger_exports = { workspace = true }
 tokio = { workspace = true, "features" = ["test-util", "time"] }
-num = {workspace = true}
+num = { workspace = true }
