--- a/massa-node/Cargo.toml
+++ b/massa-node/Cargo.toml
@@ -28,6 +28,12 @@ execution-trace = [
     "massa_execution_worker/execution-trace",
     "massa_execution_exports/execution-trace",
 ]
+execution-info = [
+    "execution-trace",
+    "massa_execution_worker/execution-info",
+    "massa_execution_exports/execution-info",
+    "massa_grpc/execution-info",
+]
 dump-block = [
     "massa_execution_worker/dump-block",
     "massa_execution_exports/dump-block",
@@ -35,12 +41,11 @@ dump-block = [
 ]
 db_storage_backend = []
 file_storage_backend = []
-execution-info = ["execution-trace"]
 jemalloc = [
     "massa_db_worker/jemalloc",
     "massa_execution_worker/jemalloc",
     "massa_event_cache/jemalloc",
-    "tikv-jemalloc-sys"
+    "tikv-jemalloc-sys",
 ]
 
 [dependencies]
