--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [main, staging, trying]
   pull_request:
-    branches: [main, 'mainnet_*']
+    branches: [main, 'main_*', 'mainnet_*']
     types:
     - opened
     - reopened
@@ -225,7 +225,7 @@ jobs:
           include-pre-releases: false
           repo-token: ${{ secrets.GITHUB_TOKEN }}
       - run: cargo install cargo-nextest --locked
-      - run: cargo nextest run --retries 10 --profile ci --all-features
+      - run: cargo nextest run --retries 10 --profile ci --features=execution-trace,dump-block
       - run: cargo clean
       - run: cargo test --doc
       - uses: codecov/codecov-action@v4
