--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -116,23 +116,23 @@ jobs:
           submodules: "recursive"
       - uses: crate-ci/typos@master
 
-  misc:
-    if: github.ref != 'refs/heads/staging'
-    needs: sanity
-    runs-on: ubuntu-latest
-    continue-on-error: true
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: "recursive"
-      - uses: dtolnay/rust-toolchain@master
-        with:
-          toolchain: 1.81.0
-      - uses: Swatinem/rust-cache@v2
-        with:
-          shared-key: "clippy"
-          save-if: ${{ github.ref_name == 'main' }}
-      - run: cargo xtask check_gas_cost_definitions
+  # misc:
+  #   if: github.ref != 'refs/heads/staging'
+  #   needs: sanity
+  #   runs-on: ubuntu-latest
+  #   continue-on-error: true
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #       with:
+  #         submodules: "recursive"
+  #     - uses: dtolnay/rust-toolchain@master
+  #       with:
+  #         toolchain: 1.81.0
+  #     - uses: Swatinem/rust-cache@v2
+  #       with:
+  #         shared-key: "clippy"
+  #         save-if: ${{ github.ref_name == 'main' }}
+  #     - run: cargo xtask check_gas_cost_definitions
 
   # Full cross-platform tests required to merge on main branch
   full:
