--- a/massa-node/base_config/config.toml
+++ b/massa-node/base_config/config.toml
@@ -442,12 +442,17 @@
     # max number of items returned per query
     max_item_return_count = 100
     # endorsements channel capacity
-    broadcast_endorsements_channel_capacity = 2000
+    endorsements_channel_capacity = 2048
     # operations channel capacity
+    operations_channel_capacity = 1024
+    # denunciation channel capacity
+    denunciations_channel_capacity = 4096
+    # broadcast endorsements channel capacity
+    broadcast_endorsements_channel_capacity = 2000
+    # broadcast operations channel capacity
     broadcast_operations_channel_capacity = 5000
     # minimal fee to include operation in the pool 0.01MAS
     minimal_fees = 0.01
-
 
 [selector]
     # path to the initial roll distribution
