--- a/massa-pool-worker/Cargo.toml
+++ b/massa-pool-worker/Cargo.toml
@@ -14,11 +14,13 @@ test-exports = [
 [dependencies]
 tracing = { workspace = true }
 parking_lot = { workspace = true, "features" = ["deadlock_detection"] }
+massa_channel = { workspace = true }
 massa_models = { workspace = true }
 massa_storage = { workspace = true }
 massa_pool_exports = { workspace = true }
 massa_time = { workspace = true }
 massa_wallet = { workspace = true }
+crossbeam-channel = { workspace = true }
 
 [dev-dependencies]
 tokio = { workspace = true, "features" = ["sync"] }
@@ -28,4 +30,3 @@ massa_hash = { workspace = true }
 massa_pool_exports = { workspace = true, "features" = ["test-exports"] }
 massa_pos_exports = { workspace = true, "features" = ["test-exports"] }
 massa_execution_exports = { workspace = true, "features" = ["test-exports"] }
-crossbeam-channel = { workspace = true }
